correction version iphone

--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ a{
 
 /* ************** ipad ************** */
 
-@media screen and (min-width: 731px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .corps{
     flex-direction: column-reverse;
   }
